# rs-rpi-pico-rickroll

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  string_to_keys.rs
